--- a/index.html
+++ b/index.html
@@ -15,9 +15,74 @@
                 <button data-track="0" class="mute kick-volume">
                     <i class="fa-solid fa-volume-xmark"></i>
                 </button>
+                <select name="kick-select" id="kick-select">
+                    <option value="./sounds/kick-808.wav">808 Kick</option>
+                    <option value="./sounds/kick-acoustic01.wav">Kick Acoustic 01</option>
+                    <option value="./sounds/kick-acoustic02.wav">Kick Acoustic 02</option>
+                </select>
+            </div>
+            <div class="kick">
+                <div class="pad kick-pad b0"></div>
+                <div class="pad kick-pad b1"></div>
+                <div class="pad kick-pad b2"></div>
+                <div class="pad kick-pad b3"></div>
+                <div class="pad kick-pad b4"></div>
+                <div class="pad kick-pad b5"></div>
+                <div class="pad kick-pad b6"></div>
+                <div class="pad kick-pad b7"></div>
+            </div>
+        </div>
+        <div class="snare-track">
+            <div class="controls">
+                <h1>Snare</h1>
+                <button data-track="0" class="mute snare-volume">
+                    <i class="fa-solid fa-volume-xmark"></i>
+                </button>
+                <select name="snare-select" id="snare-select">
+                    <option value="./sounds/snare-808.wav">808 Snare</option>
+                    <option value="./sounds/snare-acoustic01.wav">Snare Acoustic 01</option>
+                    <option value="./sounds/snare-acoustic02.wav">Snare Acoustic 02</option>
+                </select>
+            </div>
+            <div class="snare">
+                <div class="pad snare-pad b0"></div>
+                <div class="pad snare-pad b1"></div>
+                <div class="pad snare-pad b2"></div>
+                <div class="pad snare-pad b3"></div>
+                <div class="pad snare-pad b4"></div>
+                <div class="pad snare-pad b5"></div>
+                <div class="pad snare-pad b6"></div>
+                <div class="pad snare-pad b7"></div>
+            </div>
+        </div>
+        <div class="hihat-track">
+            <div class="controls">
+                <h1>Hihat</h1>
+                <button data-track="0" class="mute hihat-volume">
+                    <i class="fa-solid fa-volume-xmark"></i>
+                </button>
+                <select name="hihat-select" id="hihat-select">
+                    <option value="./sounds/hihat-808.wav">808 Hihat</option>
+                    <option value="./sounds/hihat-acoustic01.wav">Hihat Acoustic 01</option>
+                    <option value="./sounds/hihat-acoustic02.wav">Hihat Acoustic 02</option>
+                </select>
+            </div>
+            <div class="hihat">
+                <div class="pad hihat-pad b0"></div>
+                <div class="pad hihat-pad b1"></div>
+                <div class="pad hihat-pad b2"></div>
+                <div class="pad hihat-pad b3"></div>
+                <div class="pad hihat-pad b4"></div>
+                <div class="pad hihat-pad b5"></div>
+                <div class="pad hihat-pad b6"></div>
+                <div class="pad hihat-pad b7"></div>
             </div>
         </div>
     </div>
+    <button class="play">Play</button>
+    <audio class="kick-sound" src="./sounds/kick-808.wav"></audio>
+    <audio class="snare-sound" src="./sounds/snare-808.wav"></audio>
+    <audio class="hihat-sound" src="./sounds/khihat-808.wav"></audio>
     <script scr="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous"></script> />
     <script scr="./app.js"></script>
 </body>
