--- a/index.html
+++ b/index.html
@@ -89,9 +89,7 @@
     <audio class="snare-sound" src="./sounds/snare-808.wav"></audio>
     <audio class="hihat-sound" src="./sounds/hihat-808.wav"></audio>
 
-    <script scr="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-    integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" 
-    crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/33c51add7d.js" crossorigin="anonymous"></script>
     <script src="./app.js"></script>
 </body>
 </html>
